--- a/css/pages/index.css
+++ b/css/pages/index.css
@@ -1,16 +1,16 @@
-.quiz-generator {
+.main-content {
   max-width: var(--max-content-width-desktop);
-  margin: 100px auto;
+  min-height: 740px;
+  padding-top: 170px;
   width: 100%;
-  height: 400px;
 }
 
-.quiz-generator__subtitle {
+.main-content__subtitle {
   color: var(--color-text-secondary);
 }
 
-@media (max-width: 768px) {
-  .quiz-generator {
+@media (max-width: 1024px) {
+  .main-content {
     max-width: var(--max-width-tablet);
   }
 }
