--- a/css/base/base.css
+++ b/css/base/base.css
@@ -71,6 +71,70 @@ table {
   border-spacing: 0;
 }
 
+/* Input new defaults */
+input[type='checkbox'] {
+  -webkit-appearance: none;
+  appearance: none;
+  position: relative;
+  margin: 0;
+  height: 20px;
+  width: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid var(--color-primary);
+  border-radius: var(--radius-xs);
+  overflow: hidden;
+  cursor: pointer;
+  flex-shrink: 0;
+}
+
+input[type='checkbox']::before {
+  content: '';
+  min-height: 20px;
+  min-width: 20px;
+  background: var(--color-primary);
+  cursor: pointer;
+  background-image: url('/assets/check.svg');
+  background-position: center center;
+  background-repeat: no-repeat;
+  opacity: 0;
+  transition: opacity 0.2s ease-in-out;
+}
+
+input[type='checkbox']:checked::before {
+  opacity: 1;
+}
+
+input[type='radio'] {
+  -webkit-appearance: none;
+  appearance: none;
+  background-color: #fff;
+  margin: 0;
+  height: 20px;
+  width: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid var(--color-primary);
+  border-radius: 50%;
+  cursor: pointer;
+  flex-shrink: 0;
+}
+input[type='radio']::before {
+  content: '';
+  width: 12px;
+  height: 12px;
+  border-radius: 50%;
+  transform: scale(0);
+  transition: transform 0.2s ease-in-out;
+  background: var(--color-primary);
+}
+
+input[type='radio']:checked::before {
+  transform: scale(1);
+}
+
 /* Typography */
 body {
   font-size: var(--text-body);
