--- a/css/components/header.css
+++ b/css/components/header.css
@@ -14,6 +14,7 @@
 }
 
 .header__nav {
+  z-index: 10;
   position: fixed;
   inset: 64px 0 0 0;
   display: none;
@@ -49,7 +50,7 @@
   display: block;
 }
 
-.header__nav.active {
+.header__nav--active {
   display: flex;
 }
 
