--- a/css/components/button.css
+++ b/css/components/button.css
@@ -7,6 +7,7 @@
   padding: 8px 16px;
   border: solid 1px transparent;
   border-radius: var(--radius-xs);
+  text-align: center;
 }
 
 .button--primary {
