--- a/css/pages/quiz.css
+++ b/css/pages/quiz.css
@@ -1,3 +1,10 @@
+.quiz-wrapper {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .quiz {
   min-height: 740px;
   padding: 64px 0;
